--- a/P/Work.WebApp/Work.WebProj.Renhai.csproj
+++ b/P/Work.WebApp/Work.WebProj.Renhai.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\TempleAccountPrintController.cs" />
     <Compile Include="Controllers\MemberLabelController.cs" />
     <Compile Include="Controllers\TempleMarkCloseController.cs" />
+    <Compile Include="Controllers\SetDataController.cs" />
     <Compile Include="Controllers\TempleMemberController.cs" />
     <Compile Include="Controllers\RejectReportController.cs" />
     <Compile Include="Controllers\RejectLightController.cs" />
@@ -584,6 +585,7 @@
     <Content Include="Views\TempleMember\MemberPrint.cshtml" />
     <Content Include="Views\TempleAccount\Index.cshtml" />
     <Content Include="Views\MemberLabel\Index.cshtml" />
+    <Content Include="Views\SetData\Product.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
@@ -677,6 +679,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ScriptsCtrl\d.ts\angular-ui-router.d.ts" />
     <TypeScriptCompile Include="ScriptsCtrl\templemarkcloseCtr.ts" />
+    <TypeScriptCompile Include="ScriptsCtrl\productCtr.ts" />
     <TypeScriptCompile Include="ScriptsCtrl\templememberprintallCtr.ts" />
     <TypeScriptCompile Include="ScriptsCtrl\templeaccountCtr.ts" />
     <TypeScriptCompile Include="ScriptsCtrl\memberlabelCtr.ts" />
