1.超渡法會 金紙疏文excel 2.國立轉農曆日期 程式

--- a/P/Work.WebApp/Work.WebProj.Renhai.csproj
+++ b/P/Work.WebApp/Work.WebProj.Renhai.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Models\Member_Detail_Category.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MyTaiwanCalendar.cs" />
     <Compile Include="Models\m_AssemblyBatch.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
