1.copyPrint 複製列印設定 2.個別、歷代祖先 疏文excel 3.excel版面有問題(歷代祖先疏文、個別祖先蝶文、歷代祖先蝶文)待調整

--- a/P/Work.WebApp/Work.WebProj.Renhai.csproj
+++ b/P/Work.WebApp/Work.WebProj.Renhai.csproj
@@ -652,6 +652,8 @@
     <Content Include="_Code\Excel\超渡法會蝶文_個別祖先.xlsx" />
     <Content Include="_Code\Excel\超渡法會蝶文_歷代祖先.xlsx" />
     <Content Include="_Code\Excel\超渡法會蝶文_超渡嬰靈.xlsx" />
+    <Content Include="_Code\Excel\超渡法會疏文_歷代祖先.xlsx" />
+    <Content Include="_Code\Excel\超渡法會疏文_個別祖先.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
