--- a/P/Work.WebApp/Work.WebProj.Renhai.csproj
+++ b/P/Work.WebApp/Work.WebProj.Renhai.csproj
@@ -649,9 +649,9 @@
     <Content Include="_Code\Excel\BasicTable.xlsx" />
     <Content Include="_Code\Excel\超度法會金紙疏文.xlsx" />
     <Content Include="_Code\Excel\超渡法會牒文_冤親債主.xlsx" />
-    <Content Include="_Code\Excel\超渡法會蝶文_個別祖先.xlsx" />
-    <Content Include="_Code\Excel\超渡法會蝶文_歷代祖先.xlsx" />
-    <Content Include="_Code\Excel\超渡法會蝶文_超渡嬰靈.xlsx" />
+    <Content Include="_Code\Excel\超渡法會牒文_個別祖先.xlsx" />
+    <Content Include="_Code\Excel\超渡法會牒文_歷代祖先.xlsx" />
+    <Content Include="_Code\Excel\超渡法會牒文_超渡嬰靈.xlsx" />
     <Content Include="_Code\Excel\超渡法會疏文_歷代祖先.xlsx" />
     <Content Include="_Code\Excel\超渡法會疏文_個別祖先.xlsx" />
   </ItemGroup>
