--- a/P/Work.WebApp/Web.config
+++ b/P/Work.WebApp/Web.config
@@ -21,6 +21,7 @@
     <add key="WorkYear" value="2017" />
     <add key="OrdersRecordMax" value="24" />
     <add key="FortuneLimit" value="12" />
+    <add key="WishLimit" value="2" />
     <add key="AllowRejectUnit" value="1,50000032,50000034" />
   </appSettings>
   <system.web>
