--- a/P/Work.WebApp/Work.WebProj.Renhai.csproj
+++ b/P/Work.WebApp/Work.WebProj.Renhai.csproj
@@ -681,6 +681,7 @@
     <Content Include="_Code\Excel\超度法會%28超渡嬰靈%29名冊.xlsx" />
     <Content Include="_Code\Excel\禮斗金名冊格式.xlsx" />
     <Content Include="_Code\Excel\闔家平安斗標籤.xlsx" />
+    <Content Include="_Code\Excel\文玄LCD光明燈導出資料表.xlsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
