--- a/P/Work.WebApp/Web.config
+++ b/P/Work.WebApp/Web.config
@@ -8,14 +8,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="RenHai2012Entities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SR-NetWeb;initial catalog=RenHai2012;user id=sa;password=jcin@4257386~;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />  </connectionStrings>
+    <add name="RenHai2012Entities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.241;initial catalog=RenHai2012;user id=sa;password=jcin@4257386~;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Server" value="SR-NetWeb" />
+    <add key="Server" value="192.168.0.241" />
     <add key="Account" value="sa" />
     <add key="Password" value="jcin@4257386~" />
     <add key="WorkYear" value="2017" />
