--- a/P/Work.WebApp/packages.config
+++ b/P/Work.WebApp/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs.TypeScript.DefinitelyTyped" version="2.2.5" targetFramework="net40" />
+  <package id="ClosedXML" version="0.95.4" targetFramework="net40" />
   <package id="Dapper" version="1.38" targetFramework="net40" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net40" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net40" />
   <package id="EntityFramework.zh-Hant" version="6.1.1" targetFramework="net40" />
   <package id="EPPlus" version="4.0.1.1" targetFramework="net40" />
+  <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net40" />
   <package id="jQuery" version="2.1.1" targetFramework="net40" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="1.7.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
@@ -12,6 +15,7 @@
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core.zh-Hant" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.LocalDB" version="1.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hant" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
